# eduparse

./: .gitignore  Architecture.md  LICENSE  README.md  eduparse.py  pyproject.toml  pytest.ini  requirements.txt  test_eduparse.py
